--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "OSImodel.md",
+            "file": "Subnetting.md",
             "mode": "source",
             "source": false
           }
@@ -78,7 +78,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "OSImodel.md",
+                "file": "Subnetting.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -95,7 +95,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "OSImodel.md",
+                "file": "Subnetting.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -118,7 +118,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "OSImodel.md"
+                "file": "Subnetting.md"
               }
             }
           }
@@ -129,8 +129,9 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "84106b34811f7e99",
+  "active": "4eb9359c6b69c99b",
   "lastOpenFiles": [
+    "OSImodel.md",
     "CommonPortsAndProtocols.md"
   ]
 }
